@@ -20,7 +20,7 @@
 
 #import <UIKit/UIKit.h>
 
-#import "Texture2D.h"
+#import "OpenGLSupport/Texture2D.h"
 
 @interface TextureMgr : NSObject
 {
